--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,9 +24,7 @@
     <link rel="canonical" href="https://www.accomi.com" />
     <meta name="robots" content="index, follow" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-    
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">  
   </head>
   <body>
     <div id="root"></div>
